# DiffUpgrade

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/gacrnd/gcs/diffupgrade/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/gacrnd/gcs/diffupgrade/: DiffUpgradeUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/gacrnd/gcs/diffupgrade/: ExampleUnitTest.java
bsdiff_tools/: new.apk  old.apk  patch
diffalgorithm/: build.gradle
diffalgorithm/src/androidTest/java/com/gacrnd/gcs/diffalgorithm/: ExampleInstrumentedTest.java
diffalgorithm/src/main/: AndroidManifest.xml
diffalgorithm/src/main/java/: Test.java  new2.dex  old.dex  patch.dex
diffalgorithm/src/main/java/com/gacrnd/gcs/diffalgorithm/: Main.java  PatchOperation.java
diffalgorithm/src/main/java/com/gacrnd/gcs/diffalgorithm/android/: ClassDefItem.java  Dex.java  FieldIdItem.java  Header.java  MapList.java  MethodIdItem.java  ProtoIdItem.java  StringIdItem.java  TypeIdItem.java
diffalgorithm/src/main/java/com/gacrnd/gcs/diffalgorithm/diff/: DexDiff.java  DexPatch.java  PatchFile.java
diffalgorithm/src/main/java/com/gacrnd/gcs/diffalgorithm/util/: BufferUtil.java  DexDataBuffer.java  FileUtil.java  Leb128.java  Mutf8.java
diffalgorithm/src/main/res/values/: strings.xml
diffalgorithm/src/test/java/com/gacrnd/gcs/diffalgorithm/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
